# schemastore

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  constraints.txt  noxfile.py  pyproject.toml  setup.cfg  test-requirements.in  test-requirements.txt  tox.ini
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  release.yml  tox.yml
schemastore/: __init__.py  __main__.py
schemastore/tests/: test_jsonschema.py
src/schemastore/: __init__.py  __main__.py
test/: test_jsonschema.py
