[metadata]
name = schemastore
url = https://github.com/pycontribs/schemastorepy
project_urls =
  Bug Tracker = https://github.com/pycontribs/schemastorepy/issues
  CI: GitHub = https://github.com/pycontribs/schemastorepy/actions?query=workflow:gh+branch:main+event:push
  Source Code = https://github.com/pycontribs/schemastorepy
description = Dump of schemastore schemas for offline use in Python based applications
long_description = file: README.md
long_description_content_type = text/markdown
author = Sorin Sbarnea
author_email = sorin.sbarnea@gmail.com
license = Apache-2.0
license_files = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable

  Environment :: Console

  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators

  Operating System :: OS Independent

  License :: OSI Approved :: Apache Software License

  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: Implementation
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: Jython
  Programming Language :: Python :: Implementation :: PyPy

  Topic :: Software Development :: Bug Tracking
  Topic :: Software Development :: Quality Assurance
  Topic :: Software Development :: Testing

  Topic :: Utilities
keywords =
  schemastore
  json
  yaml
  schemas

[options]
use_scm_version = True
python_requires = >=3.8
package_dir =
  = src
packages = find:
zip_safe = False

# These are required in actual runtime:
install_requires =
  referencing
  requests-cache>=1.0.0a0

[options.entry_points]
console_scripts =
    schemastore = schemastore.__main__:main

[options.extras_require]
test =
  coverage
  pytest

[options.packages.find]
where = src

[options.package_data]
* = py.typed, cache.sqlite

[codespell]
skip = .tox,.mypy_cache,build,.git,.eggs,pip-wheel-metadata
